--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,7 @@
 /* Add CSS Styling */
+div p {
+    background-color: rgba(255, 255, 0, 0.459);
+    color: crimson;
+    font-size: 20px;
+    text-align: center;
+}
