--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -45,4 +49,12 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0px;
+}
+
+.links {
+  margin-left: 0;
+  margin-right: auto;
+  display: flex;
+  gap: 8px;
 }
