--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,26 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* SOLUTION */
+
+.modal {
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.mid {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons {
+  margin-top: 16px;
+}
+
+.header {
+  font-size: larger;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
