--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -37,7 +37,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
 }
 
 .header,
@@ -69,11 +68,12 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: baseline;
+  justify-content: center;
+  flex: 1;
+  gap: 16px;  
 }
 
 .input {
-  margin: 16px;
   flex-shrink: 1;
 }
 
